Version 5.12.3 (XXX 2023)
 * Assorted Atomese fixes.
 * Fix SAT-solver build breaks.

Version 5.12.2 (9 March 2023)
 * Fix null-pointer deref in Atomese code.

Version 5.12.1 (5 March 2023)
 * Assorted enhancements and fixes for the AtomSpace dictionary. #1362
 * Fix missing HAVE_THREADS_H, affects Apple Homebrew. #1363
 * Fix regex thread-safety issue. #1370
 * Disable aspell; it leaks memory. #1373
 * Deduplicate linkages when overflow forces random selection. #1378 #1396
 * Fix direct dialect settings on connectors. #1382
 * Cleanup dictionary backends. #1391 thru #1395
 * English dict: paraphrasing fixes. #1398
 * Report CPU time usage only for the current thread. #1399
 * Extensive performance optimizations for MST dictionaries. #1402
 * Remove old broken max-cost computations. #1456

Version 5.12.0 (26 Nov 2022)
 * Fix crash when using the Atomese dictionary backend.
 * Fix generation tokenization bug when dict has no unknown word token.
 * Major Atomese dictionary extensions, including generation support.
 * Minor tweaks to `any` uniform random parse tree language.
 * Include U+202F NARROW NO-BREAK SPACE as a space character.
 * Fix the various regexes so that they're thread-safe! #1354
 * Maybe(?) fix FreeBSD missing -lstdthreads #1355

Version 5.11.0 (27 Sept 2022)
 * Prototype support for dictionary in the AtomSpace.
 * English dict: assorted missing nouns, verbs. #1289
 * Performance improvements. #1309
 * Fix Windows build break in 5.10.4, 5.10.5 fixed in #1313
 * Fix "amy" language #1312
 * Fix multilib systems, e.g. elf32-i386 #1314
 * Corrected grapheme support for random morpheme sampling. #1315
 * Thai language dictionary updates #1322
 * Punctuation fixes #1331
 * Affixes can now be specified with regexes #1334
 * The regex library PCRE2 is required by default.

Version 5.10.5 (17 June 2022)
 * Updated Docker files. #1288
 * English dict: broader handling of ellipsis.
 * Updated Thai dicts: #1292, #1294